--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body
     display: grid;
     grid-template-rows: repeat(12,40px);
     background-color: rgb(136, 163, 214);
-    color: white;
+    padding-top: 15px;
 }
 
 .dash
@@ -30,7 +30,6 @@ body
     margin-right: 14px;
     margin-left: 7px;
     margin-top: 4px;
-    background-color: white;
 }
 
 .dash > h1
@@ -43,74 +42,141 @@ body
 
 .header
 {
-    background-color: beige;
-    width: 92%;
-    height: 18%;
-    padding-left: 4%;
-    padding-right: 4%;
-    padding-top: 18px;
-}
-
-#textarea
-{
-    width: 55%;
-    display: inline-block;
-    margin: 0%;
-    border-radius: 8px;
-    border: 0px;
-    background-color: aliceblue;
     height: 20%;
-    margin-left: 4%;
+    padding: 2%;
 }
 
-.header > img
+.firstline
 {
-    height:20px;
-    position: fixed;
-    top: 3%;
+    display: grid;  
+    grid-template-columns: 1fr 14fr 1fr 1fr 4fr ;
+    height: 30%;
+    align-items: center;
 }
 
-.container1
+.image > img
 {
-    padding-top: 2%;
-    display: flex;
+    align-items: center;
+    max-width: 20px;
 }
 
-#profile_pic
+.textarea > input
+{
+    width: 85%;
+    border-radius: 10px;
+    background-color: aliceblue;
+}
+
+.profile_pic > img
 {
     border-radius: 100%;
 }
 
-p,h2
+h3,p
 {
-    padding: 0%;
     margin: 0%;
 }
 
-.Details
+.secondline
 {
-    flex: 12;
-}
-
-.image
-{
-    flex: 1;
-}
-
-.buttons
-{
-    flex: 2;
+    height: 70%;
+    display: grid;
+    grid-template-columns: 1fr 7fr 1.5fr 1.5fr 1.5fr;
     align-items: center;
-    align-content: center;
-    text-align: center;
-    justify-content: center;
 }
 
 .buttons > button
 {
-    border: 0px;
     border-radius: 20px;
-    padding: 8%;
-    width: 70%;
-    background-color:  rgb(136, 163, 214);
+    border: 0px;
+    background-color: rgb(136, 163, 214);
+    max-width: 100%;
+    min-width: 90px;
+    min-height: 30px;
+    color: white;
+}
+
+.main
+{
+    background-color: rgb(220, 212, 212);
+    height: 67%;
+    padding: 2%;
+}
+
+.container1
+{
+    display: grid;
+    grid-template-columns: 3fr 1fr;
+    height: 100%;
+}
+
+.contleft > .container2
+{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 20px;
+    height: 90%;
+    padding-right: 3%;
+}
+
+.contleft > .container2 > .elements
+{
+    border-radius: 10px;
+    background-color: white;
+    border-left: 10px solid yellow;
+    padding: 10px;
+    font-size: 0.9em;
+}
+
+.elements > img
+{
+    height: 20px;
+    float: inline-end;
+    padding-right: 5%;
+}
+
+.contright > .container2
+{
+    display: grid;
+    grid-template-rows: 1fr 1fr 1fr;
+    height: 38%;
+    grid-template-columns: 1fr;
+    background-color: white;
+    border-radius: 10px;
+}
+
+.contright > .container2 > .elements
+{
+    border-top: 2px solid black;
+    padding: 2%;
+    align-items: center;
+    font-size: 0.7em;
+}
+
+.contright > .container3
+{
+    display: grid;
+    grid-template-rows: repeat(4,1fr);
+    height: 40%;
+    grid-template-columns: 1fr;
+    background-color: white;
+    border-radius: 10px;
+}
+
+.contright > .container3 > .elements 
+{
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+    grid-template-rows: 1fr;
+    align-content: center;
+    padding-left: 5%;
+    padding-right: 3%;
+    font-size: 0.8em;
+    justify-content: center;
+    align-items: center;
+}
+
+.contright > .container3 > .elements >.cont3left > img
+{
+    height: 30px;
 }
