--- a/style.css
+++ b/style.css
@@ -19,21 +19,21 @@ body
 {
     display: grid;
     grid-template-rows: repeat(12,40px);
-    background-color: rgb(136, 163, 214);
+    background-color: rgb(109, 138, 191);
     padding-top: 15px;
 }
 
 .dash
 {
     padding: 2%;
+    display: flex;
 }
 
 .dash > img
 {
     height: 20px;
-    margin-right: 14px;
-    margin-left: 7px;
-    margin-top: 4px;
+    padding-right: 10px;
+    padding-left: 5px;
 }
 
 .dash > h1
@@ -68,8 +68,8 @@ body
 {
     width: 85%;
     border-radius: 10px;
-    height: 20px;
-    background-color: rgb(171, 203, 231);
+    height: 25px;
+    background-color: rgb(111, 145, 174);
     border: 0px;
 }
 
@@ -93,12 +93,12 @@ h3,p
 
 .buttons > button
 {
-    border-radius: 20px;
+    border-radius: 25px;
     border: 0px;
-    background-color: rgb(136, 163, 214);
+    background-color: rgb(95, 119, 164);
     max-width: 100%;
-    min-width: 90px;
-    min-height: 30px;
+    min-width: 100px;
+    min-height: 40px;
     color: white;
 }
 
