--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body
     display: grid;
     grid-template-rows: repeat(12,40px);
     background-color: rgb(109, 138, 191);
-    padding-top: 15px;
+    height: 100%;
 }
 
 .dash
@@ -46,15 +46,15 @@ body
 
 .header
 {
-    height: 20%;
-    padding: 2%;
+    height: 26vh;
+    padding: 2vh;
 }
 
 .firstline
 {
     display: grid;  
     grid-template-columns: 1fr 14fr 1fr 1fr 4fr ;
-    height: 30%;
+    padding: 10px;
     align-items: center;
 }
 
@@ -105,8 +105,8 @@ h3,p
 .main
 {
     background-color: rgb(220, 212, 212);
-    height: 67%;
-    padding: 2%;
+    height: 66vh;
+    padding: 2vh;
 }
 
 .container1
